kustomapp/overlays/pp/replicas.yaml
# kustomize patch
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kustomapp
spec:
  replicas: 3
