kustomapp/overlays/pp/ingress.yaml
# kustomize patch
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kustomapp
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-cluster"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kustomapp.pp.95-181-220-26.nip.io
    secretName: kustomapp.pp.95-181-220-26.nip.io-tls
  rules:
  - host: kustomapp.pp.95-181-220-26.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomapp
            port:
              number: 8080
